compiler/tests/fail/register_allocation/x86-64/merge_across_banks.jazz
export fn mmadd(reg u64 x) -> reg u64 {
  #mmx reg u64 y;
  y = x + x;
  x = y;
  return x;
}
